# OpenCV-Object-Detection

./: CMakeLists.txt  ball-rec.cpp  ball-recog-opencv.cpp  cube-recog-opencv.cpp  face-recognition-opencv.cpp
